--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-html,body {
+html,
+body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -28,6 +29,7 @@ nav {
   text-align: center;
   width: 250px;
 }
+
 nav ul {
   align-items: center;
   display: flex;
